# mercury_planner_experiments

./: .gitignore  run_all_experiments.sh
1_same_plan/: CMakeLists.txt  README.md  elapsed.time  experiment_1.sh  output  output.sas  package.xml  run_experiment_1.sh
1_same_plan/launch/: same_plan_experiment.launch
1_scalability_test/: .experiment_1.sh.kate-swp  README.md  experiment_1.sh  run_experiment_1.sh
2_cost_range/: README.md  experiment_2.sh  run_experiment_2.sh
domains/btt_domain/: domain.pddl
domains/btt_domain/domains/: first_half_domain.pddl  second_half_domain.pddl
domains/btt_domain/problems/: p1.pddl  p10.pddl  p13.pddl  p14.pddl  p17.pddl  p2.pddl  p20.pddl  p21.pddl  p29.pddl  p3.pddl  p30.pddl  p5.pddl  p7.pddl  p9.pddl
domains/btt_domain_w_cost/: domain.pddl
domains/btt_domain_w_cost/problems/: p11.pddl  p12.pddl  p15.pddl  p16.pddl  p18.pddl  p19.pddl  p22.pddl  p23.pddl  p24.pddl  p25.pddl  p26.pddl  p27.pddl  p28.pddl  p4.pddl  p5.pddl  p6.pddl  p8.pddl
domains/gpsr_domain/: domain.pddl
domains/gpsr_domain/domains/: first_half_domain.pddl  generate_domains.sh  second_half_domain.pddl
domains/gpsr_domain/problems/: p5.pddl
domains/gpsr_domain_w_cost/: domain.pddl
domains/gpsr_domain_w_cost/problems/: p1.pddl  p10.pddl  p11.pddl  p12.pddl  p13.pddl  p14.pddl  p15.pddl  p16.pddl  p17.pddl  p18.pddl  p19.pddl  p2.pddl  p20.pddl  p21.pddl  p22.pddl  p23.pddl  p24.pddl  p25.pddl  p26.pddl  p27.pddl  p28.pddl  p29.pddl  p3.pddl  p30.pddl  p4.pddl  p5.pddl  p6.pddl  p7.pddl  p8.pddl  p9.pddl
experiment_results/scalability_test/p1/6/: elapsed.time
experiment_results/scalability_test/p1/7/: elapsed.time  mercury.plan.9
experiment_results/scalability_test/p1/global_results/: average_times.txt
experiment_results/scalability_test/p10/1/: elapsed.time  mercury.plan.6
experiment_results/scalability_test/p10/10/: elapsed.time
experiment_results/scalability_test/p10/2/: elapsed.time  mercury.plan.9
experiment_results/scalability_test/p10/3/: elapsed.time
experiment_results/scalability_test/p10/4/: elapsed.time  mercury.plan.10
experiment_results/scalability_test/p10/5/: elapsed.time
experiment_results/scalability_test/p10/6/: elapsed.time
experiment_results/scalability_test/p10/7/: elapsed.time
experiment_results/scalability_test/p10/8/: elapsed.time
experiment_results/scalability_test/p10/9/: elapsed.time
mercury_planner/: README.md
mercury_planner/seq-sat-mercury/: elapsed.time  merc.1  output.sas
plan_validation/: CMakeLists.txt
plan_validation/include/: Action.h  LaTeXSupport.h  Plan.h  plan_validator.h  validate.h
plan_validation/src/: Action.cpp  FuncExp.cpp  Plan.cpp  Polynomial.cpp  State.cpp  plan_validator.cpp  typecheck.cpp
scripts/: average_times.py  calc_lenght.py  calc_time.py  is_content_all_true.py  is_file_content_same.py
seq-sat-mercury/: full_planner_log.txt  output  plan_numbers_and_cost
(+6982 files in other folders)
