<?xml version="1.0"?>
<package>
  <name>1_same_plan</name>
  <version>0.0.2</version>
  <description>
      Experiment 1 : see if planner always produces the same 
      plan for a given PDDL domain and problem.
  </description>

  <maintainer email="olima_84@yahoo.com">Oscar Lima</maintainer>
  
  <license>GPLv3</license>

  <author email="olima_84@yahoo.com">Oscar Lima</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

</package>
